--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HARRY POTTER</title>
-    <link rel="stylesheet" href="/assets/cs/style.css">
+    <link rel="stylesheet" href="assets/cs/style.css">
 </head>
 <body>
     <h1>HARRY POTTER</h1>
