--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>HARRY POTTER</h1>
+    <h1>RAMA1</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Harry_Potter_wordmark.svg" alt="logo">
     <h2>Peliculas VS Libros</h2>
     <h3>edicion de los libros</h3>
